--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <h2>Por <a href="#">Milton Duarte</a></h2>
+        <h2>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></h2>
     </header>
     <main>
         <h1>Estou ficando cansado<br>
