--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,11 @@
     <title>Cordel Moderno</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <h2>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></h2>
+        <h2>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></h2>
     </header>
     <main>
         <h1>Estou ficando cansado<br>
@@ -23,20 +25,20 @@
         </h1>
         <div class="bloco" id="q1">
             <h1>
-            Não é mais como era antes
-            <br>
-            É tudo abreviado
-            <br>
-            "Você" só tem duas letras
-            <br>
-            O "O" e o "E" foi riscado
-            <br>
-            Para declarar o amor
-            <br>
-            Basta botar uma flor
-            <br>
-            E um coração desenhado.
-            <br>
+                Não é mais como era antes
+                <br>
+                É tudo abreviado
+                <br>
+                "Você" só tem duas letras
+                <br>
+                O "O" e o "E" foi riscado
+                <br>
+                Para declarar o amor
+                <br>
+                Basta botar uma flor
+                <br>
+                E um coração desenhado.
+                <br>
             </h1>
         </div>
         <h1>
@@ -96,4 +98,5 @@
         <p>Site criado por <a href="#" target="_blank"><strong>Mateus Augusto</strong></a></p>
     </footer>
 </body>
+
 </html>
